Fix blue button on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1058,6 +1058,7 @@ body {
   cursor: pointer;
   border: solid 1px black;
   background-color: white;
+  color: black;
 }
 
 .cart-header button:hover {
